--- a/app/views/css/login.css
+++ b/app/views/css/login.css
@@ -1,6 +1,8 @@
 body {
   background-color:rgb(179, 200, 207);
-
+  height:100%;
+  display:flex;
+  flex-direction:column;
 }
 .form-container {
   /* max-width:400px; */
