--- a/app/views/css/report_view_reminders.css
+++ b/app/views/css/report_view_reminders.css
@@ -1,5 +1,8 @@
 body {
   background-color:rgb(179, 200, 207);
+  height:100%;
+  display:flex;
+  flex-direction:column;
 }
 
 
